mypob.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: mypod
spec:
  containers:
  - name: nodejs
    image: liondr123/swarmtest:node1
    ports:
      - containerPort: 8085
    resources:
      limits:
        memory: "150M"
        cpu: "100m"
  - name: nginx
    image: nginx:1.17.6
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
