mypod2.yml
apiVersion: v2
kind: Pod
metadata:
  name: mypod
  labels:
    app: mypod
spec:
  containers:
  - name: nodejs
    image: liondr123/swarmtest:node1
    ports:
      - containerPort: 8085
    resources:
      limits:
        memory: "150M"        
  - name: nginx
    image: nginx:1.17.6
    resources:
      limits:
        memory: "128Mi"       
    ports:
      - containerPort: 80
