5.svc3.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc3
spec:
  selector:
     app: app1
  type: NodePort
  ports:
    - name: port1
      port: 8085
      targetPort: 8085
      nodePort: 31080
